Bug 692240: Gracefully handle incomplete FontBBox arrays.

The FAPI code would throw an error if the FontBBox array had fewer
than four values. We'll now replace the broken array with a valid
one.

No cluster differences expected.